fixes for primary keys and performance penalties